--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
   background-color: #322E52;
   border-radius: 5px;
   padding: 10px;
+  position: relative;
+  min-height: 100%;
 }
 
 header {
@@ -41,6 +43,46 @@ nav ul li:last-child {
   padding-right: 10px;
 }
 
+.overlay-content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: auto;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 600px;
+  height: 300px;
+  line-height: 20px;
+  color: white;
+
+  background-color: #CCB9A2;
+  text-align: center;
+
+  z-index: 10; 
+  outline: 9999px solid rgba(0,0,0,0.5);
+}
+
+.overlay-content h3 {
+  text-align: center;
+  font-size: 20px;
+}
+
+.overlay-content ul li {
+  text-align: center;
+  font-size: 15px;
+  color: #5C5789;
+  margin-left: 80px;
+}
+
+.overlay-content a {
+  padding: 40px; 
+  font-size: 20px;
+}
+
+.overlay-content a:hover {
+  text-decoration: underline;
+}
 
 #gameBox {
   margin-left: auto;
